# qt_vscode

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.278CB98117A24315.idx  mainwindow.cpp.9931CCC299ABC0B6.idx  mainwindow.h.469CFC07A53064E9.idx
examples/multi-process/: run.py  run4file.py  run4string.py  taskops.py
examples/multi-process/dignostic/: dignostic.py  dignostic2.py  dignostic3.py  dignostic4.py
src/: CMakeLists.txt  demo.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
